	- added: 'jack_multi', see ecasound(1); closes sffeat:1415822
	- added: ecasound options '--server', '--server-tcp-port' and
		 '--no-server'; these replace the misleading old
		 options '--daemon', '--nodaemon' and '--daemon-port', 
		 which are now deprecated
	- added: extended unit tests to cover option parsing, with
		 some initial test cases
	- changed: deprecated 'jack_auto', 'jack_generic' and
	           'jack_alsa'
	- changed: numbering of JACK ports created with 'jack' and
	 	   'jack_generic' starts from "_1" separately for 
		   each prefix [dsacre]
        - changed: deprecated 'ai-wave-edit', 'ao-wave-edit' commands
		   and the 'ext-cmd-wave-editor' ecasoundrc field
	- changed: emit a 'subsystem' level trace message when 
	 	   engine state changes to finished
	- changed: interactive mode - minor update to 'status' command
	  	   output
	- changed: compile libecasoundc as PIC code to make it possible
		   to use it from shared libraries; fixes problems 
		   with e.g. Audio::Ecasound on amd64 architecture ;
		   closes sfbug:2505551
	- changed: ecasound option -f now accepts empty arguments for 
		   sample format, channel count and sampling rate; empty
		   argument states that ecasound can pick a suitable
		   value, either the default value or e.g. the JACK 
		   system sampling rate; updated documentation, see
		   ecasound(1)
        - changed: minor update ecasound's "--help"
	- fixed: do not limit max-gain reported by '-ev' to [1,max]
		 value range
        - fixed: avoid denormal numbers in '-ete' (leads to unusually
		 high CPU load)
	- fixed: 'dump-cop-value' did not work as documented
	- fixed: ECI - signal an error (e.g. eci_error() returns true)
		 if connection is lost to engine process (sync lost
	 	 or an other error)
	- fixed: ecasignalview - exit if engine reports an error
		 during operation
	- fixed: interactive mode - loop devices saved with incorrect 
		 syntax, affects cs-save, cs-save-as and cs-edit ; see