@@ -41,6 +41,8 @@ xx0y2009 (v2.6.0) -** stable release **-
 		 which are now deprecated
 	- added: extended unit tests to cover option parsing, with
 		 some initial test cases
+        - added: unit test framework - minor improvements including
+		 abilitity to select which cases to run
 	- changed: deprecated 'jack_auto', 'jack_generic' and
 	           'jack_alsa'
 	- changed: numbering of JACK ports created with 'jack' and
